--- a/FurNature/FurNature/Views/Home/Index.cshtml
+++ b/FurNature/FurNature/Views/Home/Index.cshtml
@@ -49,9 +49,7 @@
 <div class="page page-home page-current page-inited" id="page-home">
     <header class="bar bar-nav">
         <a class="icon icon-settings pull-left open-panel"></a>
-        <a class="button button-link button-nav pull-right open-popup" data-popup=".popup-about">
-            About
-        </a>
+        <a class="icon icon-cart pull-right external" href="/Furnitures/Index"></a>
         <h1 class="title">FurNature</h1>
     </header>
     <div class="content">
