--- a/FurNature/FurNature/Views/Account/Register.cshtml
+++ b/FurNature/FurNature/Views/Account/Register.cshtml
@@ -51,7 +51,7 @@
                         <!-- Text inputs -->
                         <li>
                             <div class="item-content">
-                                <div class="item-media"><i class="icon icon-form-name"></i></div>
+                                <div class="item-media"><i class="icon icon-friends"></i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
                                         @Html.TextBoxFor(m => m.Email, new { @placeholder="User ID" })
@@ -61,7 +61,7 @@
                         </li>
                         <li>
                             <div class="item-content">
-                                <div class="item-media"><i class="icon icon-form-email"></i></div>
+                                <div class="item-media"><i class="icon icon-card"></i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
                                         @Html.PasswordFor(m => m.Password, new { @placeholder="Password" })
@@ -71,7 +71,7 @@
                         </li>
                         <li>
                             <div class="item-content">
-                                <div class="item-media"><i class="icon icon-form-email"></i></div>
+                                <div class="item-media"><i class="icon icon-card"></i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
                                         @Html.PasswordFor(m => m.ConfirmPassword, new { @placeholder = "Confirm Password" })
